tests/jsx_intrinsics.custom/jsx_intrinsics.custom.exp
Error: main.js:6
  6: <div id={42} />; // Error: (`id` prop) number ~> string
     ^^^^^^^^^^^^^^^ props. This type is incompatible with
  4:   div: $JSXIntrinsic<{id: string}>,
                          ^^^^^^^^^^^^ object type. See lib: lib/jsx.js:4
  Property `id` is incompatible:
      6: <div id={42} />; // Error: (`id` prop) number ~> string
                  ^^ number. This type is incompatible with
      4:   div: $JSXIntrinsic<{id: string}>,
                                   ^^^^^^ string. See lib: lib/jsx.js:4

Error: main.js:9
  9: (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<div />.props.id` to number because string [1] is incompatible with number [2].
  References:
    4:   div: $JSXIntrinsic<{id: string}>,
                                 ^^^^^^ [1]: string. See lib: lib/jsx.js:4
    9: (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
                                   ^^^^^^ [2]: number

Error: strings.js:9
  9: <Div />; // This is fine
     ^^^^^^^ props. This type is incompatible with
  4:   div: $JSXIntrinsic<{id: string}>,
                          ^^^^^^^^^^^^ object type. See lib: lib/jsx.js:4
  Property `id` is incompatible:
      4:   div: $JSXIntrinsic<{id: string}>,
                              ^^^^^^^^^^^^ property `id`. Property not found in. See lib: lib/jsx.js:4
      9: <Div />; // This is fine
         ^^^^^^^ props

Error: strings.js:10
 10: <Bad />; // Error: 'bad' not in JSXIntrinsics
      ^^^ bad. Is not a valid React JSX intrinsic

Error: strings.js:11
 11: <Str />; // Error: string ~> keys of JSXIntrinsics
      ^^^ string. Property not found in
 11: <Str />; // Error: string ~> keys of JSXIntrinsics
      ^^^ $JSXIntrinsics

Error: strings.js:13
 13: React.createElement('div', {}); // This is fine
                                ^^ props. This type is incompatible with
  4:   div: $JSXIntrinsic<{id: string}>,
                          ^^^^^^^^^^^^ object type. See lib: lib/jsx.js:4
  Property `id` is incompatible:
      4:   div: $JSXIntrinsic<{id: string}>,
                              ^^^^^^^^^^^^ property `id`. Property not found in. See lib: lib/jsx.js:4
     13: React.createElement('div', {}); // This is fine
                                    ^^ props

Error: strings.js:14
 14: React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
                         ^^^^^ bad. Is not a valid React JSX intrinsic

Error: strings.js:15
 15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                         ^^^ string. Property not found in
 15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                         ^^^ $JSXIntrinsics

Error: strings.js:18
 18: <Div id={42} />; // Not an error but should be eventually
     ^^^^^^^^^^^^^^^ props. This type is incompatible with
  4:   div: $JSXIntrinsic<{id: string}>,
                          ^^^^^^^^^^^^ object type. See lib: lib/jsx.js:4
  Property `id` is incompatible:
     18: <Div id={42} />; // Not an error but should be eventually
                  ^^ number. This type is incompatible with
      4:   div: $JSXIntrinsic<{id: string}>,
                                   ^^^^^^ string. See lib: lib/jsx.js:4


Found 9 errors
